src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
  font-family: "Playfair Display";
  src:
    local(PlayfairDisplay-Regular),
    url("/fonts/Playfair_Display/PlayfairDisplay-Regular.ttf")
      format("truetype");
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
}

@font-face {
  font-family: "Playfair Display";
  src:
    local(PlayfairDisplay-Medium),
    url("/fonts/Playfair_Display/PlayfairDisplay-Medium.ttf") format("truetype");
  font-weight: 500;
  font-style: normal;
  font-stretch: normal;
}

@font-face {
  font-family: "Playfair Display";
  src:
    local(PlayfairDisplay-SemiBold),
    url("/fonts/Playfair_Display/PlayfairDisplay-SemiBold.ttf")
      format("truetype");
  font-weight: 600;
  font-style: normal;
  font-stretch: normal;
}

@font-face {
  font-family: "Playfair Display";
  src:
    local(PlayfairDisplay-Bold),
    url("/fonts/Playfair_Display/PlayfairDisplay-Bold.ttf") format("truetype");
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
}

@font-face {
  font-family: "Lato";
  src:
    local(Lato-Regular),
    url("/fonts/Lato/Lato-Regular.ttf") format("truetype");
  font-weight: normal;
  font-style: normal;
  font-stretch: normal;
}

@font-face {
  font-family: "Lato";
  src:
    local(Lato-Bold),
    url("/fonts/Lato/Lato-Bold.ttf") format("truetype");
  font-weight: bold;
  font-style: normal;
  font-stretch: normal;
}

@font-face {
  font-family: "Lato";
  src:
    local(Lato-Black),
    url("/fonts/Lato/Lato-Black.ttf") format("truetype");
  font-weight: 900;
  font-style: normal;
  font-stretch: normal;
}

h1 {
  @apply font-playFair text-[48px] font-normal leading-[3.5rem];
}

h2 {
  @apply font-playFair text-[1.5rem] font-bold;
}

p {
  @apply font-lato text-[22px] font-normal text-[#616161];
}

label {
  @apply p-[10px] font-lato text-[22px] font-normal;
}

.btnSolid {
  @apply rounded-md bg-[#AD6E7A] font-lato text-[20px] font-bold text-white duration-300 hover:bg-white hover:text-[#616161] hover:ring-[2px] hover:ring-inset hover:ring-[#AD6E7A];
}

.btnOutline {
  @apply rounded-md border-[2px] border-[#AD6E7A] font-lato text-[20px] font-bold text-[#616161] duration-300 hover:bg-[#AD6E7A] hover:text-white;
}

.inputText {
  @apply rounded border border-[#9E9E9E] font-lato text-[22px] placeholder:text-[#9E9E9E] focus:border-[#6E7C99] focus:outline-none focus:ring-0;
}

.btnWeightNormal {
  @apply border-2 font-normal;
}

.btnNavSolid {
  @apply bg-[#6E7C99] hover:ring-[#6E7C99];
}

.mobileText {
  @apply text-[16px] font-normal;
}

.btnBudgetSolid {
  @apply rounded-md bg-[#F4E2E6] font-lato text-[#616161] duration-300 hover:bg-[#DDAFB8];
}

::-webkit-scrollbar {
  width: 0;
}

.smallerText {
  @apply text-[14px] font-normal;
}

/* Save this and delete tomorrow */
.inputField {
  @apply rounded border-2 border-gray-200 font-lato shadow-md placeholder:text-[#9E9E9E] focus:border-[#6E7C99] focus:outline-none focus:ring-0;
}

